feat: Add PyInstaller hook support
Adds a PyInstaller hook to automatically collect data files (like material symbols) when packaging `nuiitivet` applications. This simplifies the build process for users by registering the `nuiitivet._pyinstaller` hook directory via entry-points.

Refs #5

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,9 @@ Homepage = "https://github.com/yuksblog/nuiitivet"
 Issues = "https://github.com/yuksblog/nuiitivet/issues"
 Repository = "https://github.com/yuksblog/nuiitivet"
 
+[project.entry-points."pyinstaller40"]
+hook-dirs = "nuiitivet._pyinstaller:get_hook_dirs"
+
 [tool.pytest.ini_options]
 addopts = ["--import-mode=importlib"]
 testpaths = ["tests"]
