--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ dev = [
   "mypy>=1.18.2",
   "pytest>=9.0.1",
   "pytest-asyncio>=1.3.0",
+  "types-pyinstaller>=5.1",
 ]
 docs = [
   "mkdocs>=1.5.0",
