docs: Add packaging guide for PyInstaller and Nuitka
Introduces a new guide `docs/guide/packaging.md` that walks users through building standalone executables.

- Explains the trade-offs between PyInstaller (ease of use) and Nuitka (performance/security).
- Provides detailed command-line examples for both tools, including essential flags.
- Specifies required parameters for Nuitka to ensure assets and lazy-loaded modules are included correctly.
- Updates `mkdocs.yml` to include the new guide in the navigation.

Closes #5

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -41,6 +41,19 @@ nav:
   - Home: index.md
   - Guide:
       - Introduction: guide/index.md
+      - Layout:
+          - Overview: guide/layout.md
+          - Basics: guide/layout_basics.md
+          - Alignment: guide/layout_alignment.md
+          - Sizing: guide/layout_sizing.md
+          - Spacing: guide/layout_spacing.md
+          - Grid: guide/layout_grid.md
+          - Overflow: guide/layout_overflow.md
+          - Extras: guide/layout_extras.md
+      - State Management: guide/observable.md
+      - Async & Threading: guide/threading.md
+      - Interaction: guide/interaction_region.md
+      - Packaging: guide/packaging.md
   - API Reference:
       - Core: api/nuiitivet.md
       - Material Components: api/material.md
