docs: add comprehensive dialogs guide and samples
- Create new dialogs user guide (docs/guide/dialogs.md).
- Add five executable samples in src/samples/dialogs/ covering basic to advanced patterns.
- Implement and document the "Intent" pattern for decoupled MVVM architecture.
- Refactor terminology from "Factory" to "Creator" for better abstraction.
- Extend Text widget type hints to support ReadOnlyObservableProtocol (ComputedObservable).
- Update sample implementation to use OverlayResult.value for result handling.

Closes #25

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -50,6 +50,7 @@ nav:
           - Grid: guide/layout_grid.md
           - Overflow: guide/layout_overflow.md
           - Extras: guide/layout_extras.md
+      - Dialogs: guide/dialogs.md
       - State Management: guide/observable.md
       - Async & Threading: guide/threading.md
       - Interaction: guide/interaction_region.md
